<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <requestFocus />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        tools:context=".Reset_Password"
        android:text="@string/pass_reset"/>

    <EditText
        android:id="@+id/enternew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enter_new" />

    <EditText
        android:id="@+id/reentered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enternew"
        android:layout_below="@+id/enternew"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:hint="@string/reenter_password" />
       
     <Button
     android:id="@+id/reset"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_centerHorizontal="true"
     android:layout_marginBottom="91dp"
     android:text="@string/reset_pssword" 
     android:onClick="onReset" />
 
     <requestFocus android:layout_width="wrap_content" />
</RelativeLayout>
